[project]
name = "mio"
version = "0.0.1"
description = "Binary file reader for CASA format measurement sets."
authors = [
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9, < 3.13"

dependencies = [
    'astropy',
    'cerberus',
    'dask',
    'dask_jobqueue',
    'distributed',
    'graphviper',
    'matplotlib',
    'numba>=0.57.0',
    'numpy',
    'psutil',
    'ipywidgets',
    'prettytable',
    'pytest',
    'pytest-cov',
    'pytest-html',
    'rich',
    'scipy',
    'tqdm',
    'xarray',
    'zarr',
    'jupyterlab',
    'pyarrow',
    'graphviz',
]


[project.optional-dependencies]
docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]